@@ -13,6 +13,7 @@ Make the calls of other meta API go through CassandraCluster and by that use an 
 Add an exception hierarchy to wrap transport and general cassandra API exceptions http://github.com/rantav/hector/issues#issue/32
 Make HectorException extend RuntimeException
 Add the port number to be part of the cassandra host identifier so that many cassandra instances can be connected from a single hector client, http://github.com/rantav/hector/issues/issue/37/#comment_278773
+Fix bogus doubly locked initialization in CassandraClientPoolFactory
 
 0.6.0-14
 ========
